syntax = "proto3";

package skiserver;

option java_package = "org.e2eelab.skiserver.proto";

message auth_verify_email_auth_code_request {
    string email = 1;
    string authCode = 2;
}